crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I065-tunnel-onwards-with-param-default-choice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I065-tunnel-onwards-with-param-default-choice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "8\n" [Ended]
outcome: Ended
