crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I132-comparing-diverts.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I132-comparing-diverts
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "1\n" [Continue]
> "0\n" [Continue]
> "0\n" [Continue]
> "1\n" [Done]
outcome: Done
