crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__compare-divert-targets.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/compare-divert-targets
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "different knot\n" [Continue]
> "same knot\n" [Continue]
> "same knot\n" [Continue]
> "different knot\n" [Continue]
> "same knot\n" [Continue]
> "same knot\n" [Done]
outcome: Done
