crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__complex-tunnels.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/complex-tunnels
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "one (1)\n" [Continue]
> "one and a half (1.5)\n" [Continue]
> "two (2)\n" [Continue]
> "three (3)\n" [Done]
outcome: Done
