crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__cross-choice-label.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/cross-choice-label
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "\"Pick one.\"\n" [Choices: "A" (0) -> 0]
> "\"Reached B.\"\n" [Continue]
> "\"Done.\"\n" [Done]
outcome: Done
