crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__divert-in-conditional.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/divert-in-conditional
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Done]
outcome: Done
