crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__same-line-divert-is-inline.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/same-line-divert-is-inline
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "We hurried home to Savile Row as fast as we could.\n" [Done]
outcome: Done
